http://code.google.com/p/simplejson/issues/detail?id=66
git-svn-id: http://simplejson.googlecode.com/svn/trunk@202 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,7 @@
 Version 2.1.0 released XXXX-XX-XX
 
+* JSONEncoderForHTML class for escaping &, <, >
+  http://code.google.com/p/simplejson/issues/detail?id=66
 * Memoization of object keys during encoding (when using speedups)
 * Encoder changed to use PyIter_Next for list iteration to avoid
   potential threading issues
