http://bugs.python.org/issue7451
git-svn-id: http://simplejson.googlecode.com/svn/trunk@206 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,7 @@
 Version 2.1.0 released XXXX-XX-XX
 
+* Decoding performance and memory utilization enhancements
+  http://bugs.python.org/issue7451
 * JSONEncoderForHTML class for escaping &, <, >
   http://code.google.com/p/simplejson/issues/detail?id=66
 * Memoization of object keys during encoding (when using speedups)
