officially drop py2.4 support, doc tweaks, use only py2.5+ C API
git-svn-id: http://simplejson.googlecode.com/svn/trunk@208 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
 Version 2.1.0 released XXXX-XX-XX
 
+* Python 2.4 no longer supported (may still work, but no longer tested)
 * Decoding performance and memory utilization enhancements
   http://bugs.python.org/issue7451
 * JSONEncoderForHTML class for escaping &, <, >
