--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,8 @@
 Version 2.1.0 released XXXX-XX-XX
 
+* Decimal serialization officially supported for encoding with
+  use_decimal=True. For encoding this encodes Decimal objects and
+  for decoding it implies parse_float=Decimal
 * Python 2.4 no longer supported (may still work, but no longer tested)
 * Decoding performance and memory utilization enhancements
   http://bugs.python.org/issue7451
