update date in CHANGES.txt
git-svn-id: http://simplejson.googlecode.com/svn/trunk@221 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-Version 2.1.0 released XXXX-XX-XX
+Version 2.1.0 released 2010-03-10
 
 * Decimal serialization officially supported for encoding with
   use_decimal=True. For encoding this encodes Decimal objects and
