--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 2.1.1 released 2010-03-11
+
+* Corrected simplejson.__version__ and other minor doc changes.
+* Do not fail speedups tests if speedups could not be built.
+  http://code.google.com/p/simplejson/issues/detail?id=73
+
 Version 2.1.0 released 2010-03-10
 
 * Decimal serialization officially supported for encoding with
