hopefully fix compilation on windows http://code.google.com/p/simplejson/issues/detail?id=74
git-svn-id: http://simplejson.googlecode.com/svn/trunk@229 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,7 @@
 Version 2.1.1 released 2010-03-11
 
+* Fix compilation on Windows platform (and other platforms with very
+  picky compilers)
 * Corrected simplejson.__version__ and other minor doc changes.
 * Do not fail speedups tests if speedups could not be built.
   http://code.google.com/p/simplejson/issues/detail?id=73
