http://code.google.com/p/simplejson/issues/detail?id=75
git-svn-id: http://simplejson.googlecode.com/svn/trunk@230 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,8 @@
-Version 2.1.1 released 2010-03-11
+Version 2.1.1 released 2010-03-31
 
+* Change how setup.py imports ez_setup.py to try and workaround old versions
+  of setuptools.
+  http://code.google.com/p/simplejson/issues/detail?id=75
 * Fix compilation on Windows platform (and other platforms with very
   picky compilers)
 * Corrected simplejson.__version__ and other minor doc changes.
