http://code.google.com/p/simplejson/issues/detail?id=82
git-svn-id: http://simplejson.googlecode.com/svn/trunk@233 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,7 @@
 Version 2.1.2 released XXXX-XX-XX
 
+* Correctly raise TypeError when non-string keys are used with speedups
+  http://code.google.com/p/simplejson/issues/detail?id=82
 * Fix the endlineno, endcolno attributes of the JSONDecodeError exception.
   http://code.google.com/p/simplejson/issues/detail?id=81
 
