re http://code.google.com/p/simplejson/issues/detail?id=85
git-svn-id: http://simplejson.googlecode.com/svn/trunk@236 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,7 @@
 Version 2.1.2 released XXXX-XX-XX
 
+* Correct wrong end when object_pairs_hook is used
+  http://code.google.com/p/simplejson/issues/detail?id=85
 * Correct output for indent=0
   http://bugs.python.org/issue10019
 * Correctly raise TypeError when non-string keys are used with speedups
