prepare for 2.1.2 release
git-svn-id: http://simplejson.googlecode.com/svn/trunk@237 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-Version 2.1.2 released XXXX-XX-XX
+Version 2.1.2 released 2010-11-01
 
 * Correct wrong end when object_pairs_hook is used
   http://code.google.com/p/simplejson/issues/detail?id=85
