http://code.google.com/p/simplejson/issues/detail?id=86
git-svn-id: http://simplejson.googlecode.com/svn/trunk@240 a4795897-2c25-0410-b006-0d3caba88fa1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 2.1.3 released XXXX-XX-XX
+
+* Support the sort_keys option in C encoding speedups
+  http://code.google.com/p/simplejson/issues/detail?id=86
+
 Version 2.1.2 released 2010-11-01
 
 * Correct wrong end when object_pairs_hook is used
