--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 2.1.4 released XXXX-XX-XX
+
+* Migrated to github http://github.com/simplejson/simplejson
+
 Version 2.1.3 released 2011-01-17
 
 * Support the sort_keys option in C encoding speedups
