--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
 Version 2.1.4 released XXXX-XX-XX
 
+* Does not try to build the extension when using PyPy
 * Trailing whitespace after commas no longer emitted when indent is used
 * Migrated to github http://github.com/simplejson/simplejson
 
