--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 2.1.6 released 2011-XX-XX
+
+* Fix compatibility with Python 2.5
+  https://github.com/simplejson/simplejson/issues/5
+
 Version 2.1.5 released 2011-04-17
 
 * Built sdist tarball with setuptools_git installed. Argh.
