--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 2.1.7 released 2011-XX-XX
+
+* Moved documentation from a git submodule to
+  http://simplejson.readthedocs.org/
+
 Version 2.1.6 released 2011-05-08
 
 * Prevent segfaults with deeply nested JSON documents
