--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,7 @@
 Version 2.1.7 released 2011-XX-XX
 
+* Force unicode linebreak characters to be escaped (U+2028 and U+2029)
+  http://timelessrepo.com/json-isnt-a-javascript-subset
 * Moved documentation from a git submodule to
   http://simplejson.readthedocs.org/
 
