--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,8 @@
 Version 2.1.7 released 2011-XX-XX
 
+* JSONDecodeError is now raised instead of ValueError when a document
+  ends with an opening quote and the C speedups are in use.
+  https://github.com/simplejson/simplejson/issues/15
 * Updated documentation with information about JSONDecodeError
 * Force unicode linebreak characters to be escaped (U+2028 and U+2029)
   http://timelessrepo.com/json-isnt-a-javascript-subset
