update docs with namedtuple encoding to JSON object

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,8 @@
-Version 2.1.7 released 2011-XX-XX
+Version 2.2.0 released 2011-XX-XX
 
+* namedtuple (or other tuple subclasses with _asdict methods) are now
+  encoded as JSON objects rather than arrays.
+  https://github.com/simplejson/simplejson/pull/6
 * JSONDecodeError is now raised instead of ValueError when a document
   ends with an opening quote and the C speedups are in use.
   https://github.com/simplejson/simplejson/issues/15
