--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 2.2.1 released 2011-09-06
+
+* Fix MANIFEST.in issue when building a sdist from a sdist.
+  https://github.com/simplejson/simplejson/issues/16
+
 Version 2.2.0 released 2011-09-04
 
 * Remove setuptools requirement, reverted to pure distutils
