--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 3.0.7 released 2013-10-11
+
+* NOTE: this release only changes the license.
+* simplejson is now dual-licensed software, MIT or AFL v2.1.
+
 Version 3.0.6 released 2013-01-11
 
 * Fix for major Python 2.x ensure_ascii=False encoding regression
