--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 3.0.8 released 2013-02-19
+
+* Fix a Python 2.x compiler warning for narrow unicode builds
+  https://github.com/simplejson/simplejson/issues/56
+
 Version 3.0.7 released 2013-01-11
 
 * NOTE: this release only changes the license.
