--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,7 @@ Version 3.1.2 released XXXX-XX-XX
 * Updated documentation to reflect separators behavior when indent is
   not None
   https://github.com/simplejson/simplejson/issues/59
+* Test suite should be compatible with debug builds of Python 2.x and 3.x
 
 Version 3.1.1 released 2013-02-21
 
