--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 3.1.3 released XXXX-XX-XX
+
+* Updated documentation to discourage subclassing whenever possible.
+   default, object_hook, and object_pairs_hook provide almost all of
+   the functionality of subclassing.
+
 Version 3.1.2 released 2013-03-20
 
 * Updated documentation to reflect separators behavior when indent is
