--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-Version 3.1.3 released XXXX-XX-XX
+Version 3.1.3 released 2013-04-06
 
 * Updated documentation to discourage subclassing whenever possible.
    default, object_hook, and object_pairs_hook provide almost all of
