--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 3.2.0 released 2013-05-XX
+
+* New for_json kwarg in encoder to make it possible to for
+  subclasses of dict and list to be specialized.
+  https://github.com/simplejson/simplejson/pull/69
+
 Version 3.1.3 released 2013-04-06
 
 * Updated documentation to discourage subclassing whenever possible.
