--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 3.4.0 released 2014-04-02
+
+* Native setuptools support re-introduced
+  https://github.com/simplejson/simplejson/pull/92
+
 Version 3.3.3 released 2014-02-14
 
 * Improve test suite's Python 3.4 compatibility
