fix tests to run on Python 3.4

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 3.4.1 released 2014-04-30
+
+* Fixed tests to run on Python 3.4
+
 Version 3.4.0 released 2014-04-02
 
 * Native setuptools support re-introduced
