--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 3.5.0 released 2014-05-20
+
+* Added int_as_string_bitcount encoder option
+  https://github.com/simplejson/pull/96
+* Fixed potential crash when encoder created with incorrect options
+
 Version 3.4.1 released 2014-04-30
 
 * Fixed tests to run on Python 3.4
