--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 3.5.1 released 2014-05-21
+
+* Consistently reject int_as_string_bitcount settings that are not
+  positive integers
+
 Version 3.5.0 released 2014-05-20
 
 * Added int_as_string_bitcount encoder option
