--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 3.5.2 released 2014-05-22
+
+* Fix Windows build with VS2008
+  https://github.com/simplejson/simplejson/pull/97
+
 Version 3.5.1 released 2014-05-21
 
 * Consistently reject int_as_string_bitcount settings that are not
