--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 3.6.3 released 2014-08-18
+
+* Documentation updates
+  https://github.com/simplejson/simplejson/issues/103
+
 Version 3.6.2 released 2014-08-09
 
 * Documentation updates
