--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,13 @@
+Version 3.12.1 released 2017-11-23
+
+* Misc updates to build infrastructure
+* Fix an assertion failure when make_encoder receives a bad encoder argument
+  https://github.com/simplejson/simplejson/issues/188
+* Fix potential crash during GC
+  https://github.com/simplejson/simplejson/issues/187
+* Fix a reference leak when sorting keys
+  https://github.com/simplejson/simplejson/issues/186
+
 Version 3.12.0 released 2017-11-05
 
 * Fix threaded import race condition
