--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 3.12.2 released 2017-11-23
+
+* Workarounds for NamedTemporaryFile issues with Windows for tool tests
+
 Version 3.12.1 released 2017-11-23
 
 * Misc updates to build infrastructure
