--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,10 @@
-Version 3.12.2 released 2017-11-23
+Version 3.13.0 released 2017-11-23
 
 * Workarounds for NamedTemporaryFile issues with Windows for tool tests
 * Make TypeError messages contain type name instead of a repr.
   https://github.com/simplejson/simplejson/pull/191
+* Ensure that encoding of text subtypes is consistent with or without speedups
+  https://github.com/simplejson/simplejson/issues/185
 
 Version 3.12.1 released 2017-11-23
 
