--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 3.13.1 released 2017-11-24
+
+* Improve CI to catch speedups build regressions
+* Fix speedups build regression in Python 2.x
+  https://github.com/simplejson/simplejson/issues/193
+
 Version 3.13.0 released 2017-11-23
 
 * Workarounds for NamedTemporaryFile issues with Windows for tool tests
