--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 3.13.2 released 2017-11-24
+
+* Fix additional Python 2.x compilation issue on Windows
+
 Version 3.13.1 released 2017-11-24
 
 * Improve CI to catch speedups build regressions
