--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 3.16.2 released 2019-10-22
+
+* Update build matrix for Python 3.8
+  https://github.com/simplejson/simplejson/pull/255
+  https://github.com/simplejson/simplejson/pull/256
+
 Version 3.16.1 released 2018-09-07
 
 * Added examples for JSON lines use cases
