--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
-Version 3.17.1 released 2020-07-16
+Version 3.17.2 released 2020-07-16
 
-* Added arm64 to build matrix
+* Added arm64 to build matrix and reintroduced
+  manylinux wheels
   https://github.com/simplejson/simplejson/pull/264
 * No more bdist_wininst builds per PEP 527
   https://github.com/simplejson/simplejson/pull/260
