--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 3.17.3 released 2021-XX-XX
+
+* Replaced Travis-CI and AppVeyor with Github Actions
+
 Version 3.17.2 released 2020-07-16
 
 * Added arm64 to build matrix and reintroduced
