--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 3.17.3 released 2021-07-09
+
+* Replaced Travis-CI and AppVeyor with Github Actions,
+  adding wheels for Python 3.9.
+  https://github.com/simplejson/simplejson/pull/283
+
 Version 3.17.2 released 2020-07-16
 
 * Added arm64 to build matrix and reintroduced
