--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+* Fix the C extension module to harden is_namedtuple against looks-a-likes such
+  as Mocks. Also prevent dict encoding from causing an unraised SystemError when
+  encountering a non-Dict. Noticed by running user tests against a CPython
+  interpreter with C asserts enabled (COPTS += -UNDEBUG).
+
 Version 3.17.3 released 2021-07-09
 
 * Replaced Travis-CI and AppVeyor with Github Actions,
