--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 3.17.6 released 2021-11-15
+
+* Declare support for Python 3.10 and add wheels
+  https://github.com/simplejson/simplejson/pull/291
+  https://github.com/simplejson/simplejson/pull/292
+
 Version 3.17.5 released 2021-08-23
 
 * Fix the C extension module to harden is_namedtuple against looks-a-likes such
