--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 3.18.2 released 2023-02-04
+
+* Distribute a pure python wheel for Pyodide
+  https://github.com/simplejson/simplejson/pull/308
+
 Version 3.18.1 released 2023-01-03
 
 * Remove unnecessary `i` variable from encoder module namespace
