--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 3.19.2 released 2023-10-05
+
+* Updated test & build matrix to include Python 3.12 and use
+  GitHub Actions as a Trusted Publisher (OIDC)
+  https://github.com/simplejson/simplejson/pull/317
+
 Version 3.19.1 released 2023-04-06
 
 * This release contains security hardening measures based on recommendations
