--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 3.19.3 released 2024-MM-DD
+
+* Updated test & build matrix to include Python 3.13
+
 Version 3.19.2 released 2023-10-05
 
 * Updated test & build matrix to include Python 3.12 and use
