--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 3.20.2 released 2025-09-24
+
+* Disable speedups on GraalPy smae as on PyPy
+  https://github.com/simplejson/simplejson/pull/339
+
 Version 3.20.1 released 2025-02-14
 
 * Do not memoize keys before they are coerced to string
